--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
           </p>
           <div class="hero-buttons">
             <!-- Grupo de botones de acción -->
-            <a href="#portafolio" class="btn-primary">Ver Portafolio</a>
+            <a href="#portafolio" class="btn btn-primary">Ver Portafolio</a>
             <!-- CTA principal al portafolio -->
-            <a href="#contacto" class="btn-secondary">Contactar</a>
+            <a href="#contacto" class="btn btn-secondary">Contactar</a>
             <!-- CTA secundaria al formulario de contacto -->
           </div>
         </div>
@@ -151,7 +151,7 @@
         <!-- Centra y limita el ancho del contenido -->
         <div class="section-header">
           <!-- Cabecera común de secciones (título + divisor) -->
-          <h2 class="section-title">Sobre Mí</h2>
+          <h2 class="section-title" data-text="Sobre Mí">Sobre Mí</h2>
           <!-- Título de la sección -->
           <div class="section-divider"></div>
           <!-- Línea/divisor decorativo bajo el título -->
@@ -248,7 +248,7 @@
       <!-- Sección de habilidades técnicas -->
       <div class="contenedor">
         <div class="section-header">
-          <h2 class="section-title">Habilidades Técnicas</h2>
+          <h2 class="section-title" data-text="Habilidades Técnicas">Habilidades Técnicas</h2>
           <div class="section-divider"></div>
         </div>
         <div class="skills-container">
@@ -352,7 +352,7 @@
       <!-- Sección de proyectos -->
       <div class="contenedor">
         <div class="section-header">
-          <h2 class="section-title">Portafolio</h2>
+          <h2 class="section-title" data-text="Portafolio">Portafolio</h2>
           <div class="section-divider"></div>
         </div>
         <div class="portfolio-filters">
@@ -421,7 +421,7 @@
                   <!-- Nombre del proyecto -->
                   <p>
                     Aplicación web que usa la API de OpenWeatherMap para mostrar el clima y otras características de la ciudad buscada.
-                    Hecha con Node.js, Express, EJS, Axios y OpenWeatherMapAPI
+                    Hecha con Node.js, Express, EJSy Axios
                   </p>
                   <!-- Breve descripción -->
                   <div class="portfolio-links">
@@ -520,7 +520,7 @@
       <!-- Línea de tiempo de experiencia laboral -->
       <div class="contenedor">
         <div class="section-header">
-          <h2 class="section-title">Experiencia</h2>
+          <h2 class="section-title" data-text="Experiencia">Experiencia</h2>
           <div class="section-divider"></div>
         </div>
         <div class="timeline">
@@ -547,6 +547,7 @@
                 <span class="skill-tag">Wordpress</span>
                 <span class="skill-tag">PHP</span>
                 <span class="skill-tag">JavaScript</span>
+                <span class="skill-tag">CSS</span>
               </div>
             </div>
           </div>
@@ -560,7 +561,7 @@
       <!-- Sección de contacto con info y formulario -->
       <div class="contenedor">
         <div class="section-header">
-          <h2 class="section-title">Contacto</h2>
+          <h2 class="section-title" data-text="Contacto">Contacto</h2>
           <div class="section-divider"></div>
           <p class="section-subtitle">
             ¿Tienes un proyecto en mente? ¡Hablemos!
@@ -651,7 +652,7 @@
               </div>
               <button type="submit" class="submit-btn">
                 <!-- Botón enviar; el submit se manejará con JS -->
-                <span class="btn-text">Enviar Mensaje</span>
+                <span class="btn btn-text">Enviar Mensaje</span>
                 <i class="fas fa-paper-plane"></i>
                 <!-- Icono de avión de papel -->
               </button>
@@ -712,7 +713,7 @@
         <div class="footer-bottom">
           <!-- Franja inferior con derechos -->
           <p>&copy; <span id="year"></span> Portafolio :). 
-            Hecho con <span class="footer-heart">❤️</span></p>
+            Hecho con <span class="heart">💜</span></p>
           <!-- Toque personal/humano -->
         </div>
       </div>
